trunk/Archive2/03/1fa9824fa42741/output
main.cpp:19:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:25:10: error: 'clrscr' was not declared in this scope
   clrscr();
          ^
main.cpp:30:13: error: 'delay' was not declared in this scope
    delay(100);
             ^
main.cpp:114:14: error: 'getch' was not declared in this scope
        getch();
              ^
main.cpp:126:22: warning: format '%c' expects argument of type 'char*', but argument 2 has type 'int' [-Wformat=]
        scanf("%c",ans);
                      ^
main.cpp: In function 'void Board()':
main.cpp:133:15: error: 'clrscr' was not declared in this scope
        clrscr();
               ^
main.cpp:169:8: error: a function-definition is not allowed here before '{' token
        {
        ^
main.cpp:306:8: error: expected '}' at end of input
        } /*End of Code */
        ^
bash: line 9: ./a.out: No such file or directory
